<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <!--  Header Starts-->
        <!--<LinearLayout-->
            <!--android:id="@+id/header"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_gravity="center"-->
            <!--android:background="@drawable/header_gradient"-->
            <!--android:paddingBottom="5dip"-->
            <!--android:paddingTop="5dip"-->
            <!--android:weightSum="1">-->
            <!-- Logo Start-->
            <!--<ImageView-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:contentDescription="the logo name"-->
                <!--android:paddingBottom="5dip"-->
                <!--android:paddingTop="5dip"-->
                <!--android:src="@drawable/ic_logo"/>-->
            <!-- Logo Ends -->
        <!--</LinearLayout>-->
        <!--  Header Ends -->

        <!-- Registration Form -->
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_gravity="center_vertical"
                      android:layout_alignParentBottom="true"
                      android:orientation="vertical"
                      android:padding="10dip">

            <!--  Title Label -->
            <!--<TextView-->
                <!--android:layout_width="fill_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_marginBottom="20dip"-->
                <!--android:text="@string/reg_title"-->
                <!--android:textSize="25dip"-->
                <!--android:textStyle="bold"/>-->

            <!--  Avatar -->
            <ImageView
                android:id="@+id/reg_avatar"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:contentDescription="@string/app_name"
                android:src="@drawable/avatar" />

            <Button
                android:id="@+id/reg_chooseAvatar"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:layout_gravity="center_horizontal"
                android:paddingRight="5dp"
                android:paddingLeft="5dp"
                android:layout_marginBottom="20dip"
                android:background="@drawable/bg_follow_button"
                android:onClick="chooseAvatar"
                android:text="@string/reg_chooseAvatar" />

            <!-- Username Label -->
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/reg_username"
                android:textColor="#372c24"/>

            <EditText
                android:id="@+id/reg_username"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dip"
                android:layout_marginTop="5dip"
                android:hint="@string/reg_username_hint"
                android:inputType="textPersonName"
                android:singleLine="true"/>

            <!--<View-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="1dp"-->
                <!--android:layout_marginBottom="5dp"-->
                <!--android:background="@color/actionBar" />-->

            <TextView
                android:id="@+id/reg_username_info"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:text=""
                android:textColor="@color/error"
                android:visibility="gone"/>

            <!-- Password Label -->
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dip"
                android:text="@string/reg_password"
                android:textColor="#372c24"/>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dip"
                android:layout_marginTop="5dip">

                <EditText
                    android:id="@+id/reg_password"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/reg_password_hint"
                    android:inputType="textPassword"
                    android:singleLine="true"/>

                <ImageButton
                    android:id="@+id/imageButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="5dp"
                    android:background="@null"
                    android:onClick="changePasswordVisibility"
                    android:src="@drawable/visible_icon"/>
            </RelativeLayout>

            <TextView
                android:id="@+id/reg_password_info"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:text=""
                android:textColor="@color/error"
                android:visibility="gone"/>

            <!--  Email Label -->

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dip"
                android:text="@string/reg_email"
                android:textColor="#372c24"/>

            <EditText
                android:id="@+id/reg_email"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dip"
                android:layout_marginTop="5dip"
                android:hint="@string/reg_email_hint"
                android:inputType="textEmailAddress"
                android:singleLine="true"/>

            <TextView
                android:id="@+id/reg_email_info"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:text=""
                android:textColor="@color/error"
                android:visibility="gone"/>

            <!--  Country Label -->

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dip"
                android:text="@string/reg_country"
                android:textColor="#372c24"/>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dip"
                android:layout_marginTop="5dip"
                android:orientation="horizontal">

                <com.android.volley.toolbox.NetworkImageView
                    android:id="@+id/reg_country_flag"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginRight="10dip"
                    />

                <Spinner
                    android:id="@+id/reg_country"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"/>
            </LinearLayout>

            <!-- Register Button -->
            <Button
                android:id="@+id/btnRegister"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dip"
                android:layout_marginTop="25dip"
                android:background="@drawable/bg_contact_button"
                android:onClick="askForRegistration"
                android:text="Register New Account"/>

            <TextView
                android:id="@+id/reg_registerBtn_info"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:text=""
                android:textColor="@color/error"
                android:visibility="gone"/>

            <!-- Link to Login Screen -->
            <TextView
                android:id="@+id/link_to_login"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dip"
                android:layout_marginTop="45dip"
                android:gravity="center"
                android:text="@string/reg_link_to_login"
                android:textColor="#0b84aa"
                android:textSize="20dip"
                android:textStyle="bold"/>

        </LinearLayout>
        <!-- Registration Form Ends -->
    </RelativeLayout>
</ScrollView>