<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <!--  Header Starts-->
        <!--<LinearLayout-->
            <!--android:id="@+id/header"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_gravity="center"-->
            <!--android:background="@drawable/header_gradient"-->
            <!--android:paddingBottom="5dip"-->
            <!--android:paddingTop="5dip"-->
            <!--android:weightSum="1">-->
            <!-- Logo Start-->
            <!--<ImageView-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:contentDescription="the logo name"-->
                <!--android:paddingBottom="5dip"-->
                <!--android:paddingTop="5dip"-->
                <!--android:src="@drawable/ic_logo"/>-->
            <!-- Logo Ends -->
        <!--</LinearLayout>-->
        <!--  Header Ends -->

        <!-- Login Form -->
        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="vertical"
            android:padding="10dip"
            tools:ignore="UselessParent" >

            <!--  Title Label -->
            <!--<TextView-->
                <!--android:layout_width="fill_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_marginBottom="20dip"-->
                <!--android:text="@string/login_title"-->
                <!--android:textSize="25dip"-->
                <!--android:textStyle="bold" />-->

            <!--  Avatar -->
            <!--<ImageView-->
                <!--android:id="@+id/login_avatar"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_gravity="center"-->
                <!--android:layout_marginBottom="20dip"-->
                <!--android:contentDescription="@string/app_name"-->
                <!--android:src="@drawable/avatar" />-->

            <!--  Username Label -->
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_username"
                android:textColor="#372c24"/>

            <EditText
                android:id="@+id/login_username"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dip"
                android:layout_marginTop="5dip"
                android:inputType="textPersonName"
                android:singleLine="true"/>

            <!--  Password Label -->
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dip"
                android:text="@string/login_password"
                android:textColor="#372c24"/>

            <EditText
                android:id="@+id/login_password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:singleLine="true"/>

            <!-- Login button -->
            <Button
                android:id="@+id/btnLogin"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dip"
                android:layout_marginBottom="5dip"
                android:background="@drawable/bg_contact_button"
                android:onClick="askForLogin"
                android:text="Login"/>

            <TextView
                android:id="@+id/login_loginBtn_info"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:text=""
                android:textColor="@color/error"
                android:visibility="gone"/>

            <!-- Link to Registration Screen -->
            <TextView
                android:id="@+id/link_to_register"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dip"
                android:layout_marginTop="45dip"
                android:gravity="center"
                android:text="@string/login_link_to_register"
                android:textColor="#0b84aa"
                android:textSize="20dip"
                android:textStyle="bold"/>

            <!-- Link to Forget Screen -->
            <TextView
                android:id="@+id/link_to_forget"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dip"
                android:gravity="center_horizontal"
                android:text="@string/login_link_to_forget"
                android:textColor="#0b84aa"
                android:textSize="16dip"
                android:textStyle="bold"/>

        </LinearLayout>
        <!-- Login Form Ends -->

    </RelativeLayout>
</ScrollView>
